--- a/modules/linux/wayland/ags/style.css
+++ b/modules/linux/wayland/ags/style.css
@@ -1,30 +1,76 @@
 window.bar {
-  background-color: rgba(50, 50, 50, 0.5);
+  background-color: transparent;
+  /* background-color: rgba(128, 128, 128, 0.3); */
   color: rgba(255, 255, 255, 0.975);
   font-family: "Inter", sans;
 }
 
+box.outer {
+  margin-left: 4px;
+  margin-right: 4px;
+  margin-top: 8px;
+  padding: 2px 4px;
+  border-radius: 9999px;
+  /* border: 2px solid rgba(128, 128, 128, 0.5); */
+  background-color: rgba(128, 128, 128, 0.45);
+  /* border: 0px solid transparent; */
+}
+
+scale {
+  padding: 0px 6px;
+}
+
 button {
+  min-height: 0;
   min-width: 0;
+  margin: 0;
   padding-top: 0;
   padding-bottom: 0;
-  background-color: transparent;
+  border-radius: 0;
+  /* background-color: transparent; */
 }
 
 button:active {
-  background-color: rgba(70, 70, 70, 0.6);
+  background-color: rgba(128, 128, 128, 0.15);
 }
 
 button:hover {
-  border-bottom: 3px solid rgba(128, 128, 128, 0.5);
+  /* border-bottom: 3px solid rgba(128, 128, 128, 0.5); */
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 label {
   font-weight: bold;
+  padding: 0;
+  margin: 0;
 }
 
-.workspaces button.focused {
-  border-bottom: 3px solid rgba(30, 60, 255, 0.6);
+box.workspaces {
+  /* background-color: rgba(128, 128, 128, 0.5); */
+  border-radius: 9999px;
+  padding: 2px;
+  margin: 0;
+}
+
+box.workspaces button {
+  padding: 4px 8px;
+}
+
+box.workspaces button:first-child {
+  border-top-left-radius: 9999px;
+  border-bottom-left-radius: 9999px;
+  padding-left: 12px;
+}
+
+box.workspaces button:last-child {
+  border-top-right-radius: 9999px;
+  border-bottom-right-radius: 9999px;
+  padding-right: 12px;
+}
+
+box.workspaces button.focused {
+  background-color: rgba(30, 70, 255, 0.75);
+  /* border-bottom: 3px solid rgba(30, 60, 255, 0.6); */
 }
 
 .client-title {
