rofi, ags, hyprland, udisks2

--- a/modules/linux/wayland/ags/src/style.css
+++ b/modules/linux/wayland/ags/src/style.css
@@ -1,7 +1,9 @@
 window.bar {
   background: transparent;
-  color: rgba(255, 255, 255, 0.95);
+  color: rgba(255, 255, 255, 0.88);
   font-family: "Inter", sans;
+  font-size: 13px;
+  font-weight: 500;
 }
 
 box.outer {
@@ -9,7 +11,7 @@ box.outer {
   margin-bottom: 0;
   padding: 3px;
   border-radius: 9999px;
-  background: rgba(75, 75, 75, 0.75);
+  background: rgba(90, 90, 90, 0.75);
 }
 
 scale {
@@ -32,7 +34,7 @@ button:active {
 }
 
 box.workspaces label {
-  font-weight: 700;
+  font-weight: 600;
 }
 
 box.workspaces {
@@ -53,14 +55,14 @@ box.workspaces button.first {
   border-top-left-radius: 9999px;
   border-bottom-left-radius: 9999px;
   padding-left: 14px;
-  border-left: 1px solid transparent;
+  border-left-color: transparent;
 }
 
 box.workspaces button.last {
   border-top-right-radius: 9999px;
   border-bottom-right-radius: 9999px;
   padding-right: 14px;
-  border-right: 1px solid transparent;
+  border-right-color: transparent;
 }
 
 box.workspaces button {
@@ -75,12 +77,6 @@ box.workspaces button.focused {
   background: rgba(40, 70, 255, 0.75);
 }
 
-label.client-title {
-  font-weight: 700;
-  border-bottom: 2px solid rgba(255, 255, 255, 0.55);
-  margin: 2px 2px;
-}
-
 .notification {
   color: rgba(255, 230, 50, 0.9);
 }
@@ -88,4 +84,54 @@ label.client-title {
 levelbar block,
 highlight {
   min-height: 10px;
+}
+
+.datetime,
+.volume,
+.systray {
+  border-radius: 9999px;
+  border: 1.5px solid rgba(0, 0, 0, 0.24);
+  background: rgba(0, 0, 0, 0.22);
+}
+
+label.client-title {
+  padding: 0 10px;
+  background: rgba(255, 255, 255, 0.51);
+  margin: 1px 0;
+  border-radius: 9999px;
+  color: rgba(0, 0, 0, 0.8);
+  font-weight: 600;
+  min-width: 30px;
+}
+
+.datetime label {
+  padding: 0 8px;
+}
+
+.datetime label:not(:last-child) {
+  border-right: 1.5px solid rgba(0, 0, 0, 0.24);
+}
+
+.systray button {
+  border-radius: 9999px;
+  font-size: 14px;
+}
+
+.circular {
+  font-size: 4.5px;
+  min-width: 15px;
+  min-height: 15px;
+}
+
+.volume {
+  padding: 0 6px;
+  font-size: 14px;
+}
+
+.volume .icon {
+  padding-right: 6px;
+}
+
+.volume .circular {
+  color: rgba(40, 70, 255, 0.85);
 }
