--- a/modules/linux/wayland/ags/src/css/main.css
+++ b/modules/linux/wayland/ags/src/css/main.css
@@ -30,18 +30,40 @@
   }
 }
 
-window.bar {
+.bar {
   background: transparent;
   color: rgba(255, 255, 255, 0.88);
   font-family: "Inter", sans;
   font-size: 13px;
   font-weight: 500;
+  & .bar-left {
+    & > * {
+      margin-right: 6px;
+    }
+    & > *:last-child {
+      margin-right: 6px;
+    }
+  }
+  & .bar-center {
+    & > * {
+      margin: 0 6px;
+    }
+  }
+  & .bar-right {
+    & > * {
+      margin-left: 6px;
+    }
+    & > *:first-child {
+      margin-left: 0px;
+    }
+  }
 }
 
-box.outer {
+.outer {
   padding: 4px;
   border-bottom: 2.5px solid rgba(124, 124, 124, 0.5);
   background: rgba(90, 90, 90, 0.6);
+  background: rgba(86, 86, 86, 0.65);
 }
 
 scale {
@@ -52,7 +74,7 @@ button {
   min-height: 0;
   min-width: 0;
   border-radius: 0;
-  background: rgba(0, 0, 0, 0.85);
+  background: rgba(0, 0, 0, 0.65);
 
   &:hover {
     background: rgba(0, 0, 0, 0.35);
@@ -62,9 +84,17 @@ button {
   }
 }
 
-box.workspaces {
+.workspaces {
+  & > * {
+    margin-right: 6px;
+  }
+  & > *:last-child {
+    margin-right: 0px;
+  }
+}
+
+.workspaces-group {
   border-radius: 9999px;
-  background: rgba(0, 0, 0, 0.85);
 
   label {
     font-weight: 600;
@@ -76,8 +106,6 @@ box.workspaces {
     border: 1px solid transparent;
     border-right: 1px solid rgba(128, 128, 128, 0.3);
     border-left: 1px solid rgba(128, 128, 128, 0.3);
-    background: transparent;
-
     &.first {
       border-top-left-radius: 9999px;
       border-bottom-left-radius: 9999px;
@@ -103,14 +131,17 @@ box.workspaces {
   color: rgba(255, 220, 60, 0.9);
 }
 
-label.client-title {
-  padding: 0 10px;
-  background: rgba(255, 255, 255, 0.52);
-  margin: 1px 0;
-  border-radius: 9999px;
-  color: rgba(0, 0, 0, 0.95);
-  font-weight: 600;
-  min-width: 30px;
+.client-title {
+  margin-right: 6em;
+  font-size: 12px;
+  & > label {
+    padding: 0 10px;
+    background: rgba(0, 0, 0, 0.2);
+    border: 2px solid rgba(0, 0, 0, 0.15);
+    border-radius: 9999px;
+    font-weight: 600;
+    min-width: 2em;
+  }
 }
 
 .datetime {
