--- a/modules/linux/wayland/ags/src/css/main.css
+++ b/modules/linux/wayland/ags/src/css/main.css
@@ -134,6 +134,7 @@ button {
 .client-title {
   margin-right: 6em;
   font-size: 12px;
+  font-family: "Symbols Nerd Font Mono", sans;
   & > label {
     padding: 0 10px;
     background: rgba(0, 0, 0, 0.2);
