--- a/modules/linux/wayland/ags/src/css/main.css
+++ b/modules/linux/wayland/ags/src/css/main.css
@@ -33,7 +33,7 @@
 .bar {
   background: transparent;
   color: rgba(255, 255, 255, 0.88);
-  font-family: "Inter", sans;
+  font-family: "Symbols Nerd Font Mono", "Inter", sans;
   font-size: 13px;
   font-weight: 500;
   & .bar-left {
@@ -134,7 +134,6 @@ button {
 .client-title {
   margin-right: 6em;
   font-size: 12px;
-  font-family: "Symbols Nerd Font Mono", sans;
   & > label {
     padding: 0 10px;
     background: rgba(0, 0, 0, 0.2);
@@ -212,13 +211,16 @@ button {
       /* margin: 0 2px; */
       border: none;
     }
-    & > *:not(:last-child) {
-      border-right: 2px solid rgba(0, 0, 0, 0.15);
-      border-right: 2px solid rgba(255, 255, 255, 0.2);
-      border-radius: 0;
+    & > label.player {
+      padding-right: 0;
     }
+    /* & > label.title {} */
     & label {
       font-weight: 600;
+      font-size: 12px;
+      &.player {
+        font-size: 13px;
+      }
     }
   }
   &:hover > box {
